--- a/main.html
+++ b/main.html
@@ -7,10 +7,20 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<title>Class Selector Exercise</title>
+	<style>
+		.selector{
+			font-color:#00f;
+			background-color:#eee;
+			font-family:arial;
+			font-size:20px;
+		}
+	</style>
+	</head>
+<body>
+<p class="selector">This is Paragraph 1 with class selector.</p>
+<p>This is Paragraph 2 without class selector.</p>
+<p class="selector">This is Paragraph 3 with class selector.</p>
+<p>This is Paragraph 4 without class selector.</p>
 </body>
-
 </html>
