--- a/main.html
+++ b/main.html
@@ -1,22 +1,18 @@
+
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<title>Class Selector Exercise</title>
+<style>
+.selector {
+  color: #00f;
+  background-color: #eee;
+  font-family: Arial;
+  font-size: 20px;
+}
+</style>
 </head>
-
-<body>
-	<title>Class Selector Exercise</title>
-	<style>
-		.selector{
-			font-color:#00f;
-			background-color:#eee;
-			font-family:arial;
-			font-size:20px;
-		}
-	</style>
-	</head>
 <body>
 <p class="selector">This is Paragraph 1 with class selector.</p>
 <p>This is Paragraph 2 without class selector.</p>
